--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{ "homepage": "https://Portfolio.github.io/my-react-app",
+{ "homepage": "https://ruchi-yadav78.github.io/Portfolio",
   "name": "port1",
   "version": "0.1.0",
   "private": true,
